3 Helm Deep Dive/threeTierApplication/my-app/v1/templates/back-end-ingress.yaml
# API Version
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingress Object Name 
  name: ingress-back-end-helm3training
  # Namespace 
  # namespace: helm3
spec:
  rules:
   # Rule Host match  /etc/hosts
   # host 80 443 
    - host: api.helm3training.com
      http:
        paths:          
          - path: /
            #Path types https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
            pathType: Prefix
            backend:
              service:
                name: back-end-app-springboot-demo
                port:
                  number: 9999
